# chordian-python-sdk

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
chordian/: __init__.py  _client.py  _sse.py  _validation.py  config.py  exceptions.py
chordian/agentic_crawler/: __init__.py  _agentic_crawler.py  _types.py
chordian/chordian_deep_search/: __init__.py  _chordian_deep_search.py  _types.py
chordian/company_search/: __init__.py  _company_search.py  _types.py
chordian/enterprise_search/: __init__.py  _enterprise_search.py  _types.py
chordian/memory/: __init__.py  _memory.py  _types.py
chordian/people_search/: __init__.py  _people_search.py  _types.py
chordian/research/: __init__.py  _research.py  _types.py
chordian/webandreasearch/: __init__.py  _types.py  _validation.py  _webandreasearch.py
examples/: README.md
examples/agentic_crawler/: start.py
examples/chordian_deep_search/: start.py  upload.py
examples/company_search/: continue_search.py  enrich.py  get_lists.py  get_search_result.py  instant_search.py  manage_lists.py  search.py  start.py  start_and_poll.py  start_enrichment.py  status.py  stop.py  stop_enrichment.py
examples/enterprise_search/: associate_credential.py  chat.py  connector_run_once.py  connectors.py  create_chat_session.py  create_connector.py  create_deletion_attempt.py  get_cc_pair.py  get_chat_sessions.py  get_connector_status.py  get_connectors.py  get_file_statuses.py  rename_chat_session.py  send_chat_message.py  sessions.py  update_cc_pair_status.py  upload_file.py
examples/memory/: chat.py  create_department.py  departments_and_chat.py  generate.py  generate_memory.py  get_department.py  ingest_connectors.py  list_departments.py  manage.py  upload.py
examples/people_search/: continue_search.py  enrich_and_manage.py  instant_search.py  search.py  start.py  start_and_poll.py  start_enrichment.py  status.py  stop.py  stop_enrichment.py
examples/research/: active.py  active_and_stop.py  deep_research_stream.py  (+6 more)
tests/: conftest.py  test_agentic_crawler.py  test_chordian_deep_search.py  test_client_and_errors.py  test_company_search.py  test_enterprise_search.py  test_memory.py  test_package.py  test_people_search.py  test_research.py  test_sse.py  test_webandreasearch.py
(+1 files in other folders)
